--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "com.facebook.react"
 
 import com.android.build.OutputFile
 import org.apache.tools.ant.taskdefs.condition.Os
@@ -182,7 +183,7 @@ android {
         afterEvaluate {
             // If you wish to add a custom TurboModule or component locally,
             // you should uncomment this line.
-            // preBuild.dependsOn("generateCodegenArtifactsFromSchema")
+            preBuild.dependsOn("generateCodegenArtifactsFromSchema")
             preDebugBuild.dependsOn(packageReactNdkDebugLibs)
             preReleaseBuild.dependsOn(packageReactNdkReleaseLibs)
 
@@ -221,6 +222,9 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            def staticFactory = System.getenv("STATIC_FACTORY")
+
+            buildConfigField "String", "STATIC_FACTORY", staticFactory != null ? "\"${staticFactory}\"" : "\"0\""
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
