--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "server": "node ./server.js",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-native": "0.70.1",
+    "rtn-setclient": "./rtn-setclient"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
